Schematic Brush Reborn 1.1-BETA (#5)
Make plugin compatible with Java 8